new method for stream and add MyLinkedList